--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <main>
         <div class="content">
             <section class="latest-news">
+                <h2 class="judul">Latest News</h2>
                 <div class="left">
                     <article>
                         <img src="img/prabowo.jpg" alt="Prabowo Subiato">
@@ -133,7 +134,7 @@
 
                 <!-- Aside Start -->
                 <aside>
-                    <h3>Peta Lokasi</h3>
+                    <h3>Jelajahi Berita di Sekitarmu</h3>
                     <div id="map" style="height: 200px; width: 100%;"></div>
                     <div class="news" id="news" style="margin-top: 20px;"></div>
                 </aside>
@@ -142,7 +143,9 @@
             </section>
 
             <section class="popular-article">
-                <h2>Popular Article</h2>
+
+                <h2 class="judul">Popular Article</h2>
+
                 <article>
                     <h3>Global Wildlife Report</h3>
                     <p>A new World Wildlife Fund report reveals a drastic 70% decline in wildlife populations globally since 1970...</p>
@@ -166,7 +169,32 @@
     <!-- Main End -->
 
     <!-- Footer Start -->
-    
+    <footer>
+    <div class="footer-content">
+        <h3>Ruang Biru</h3>
+        <p>Menyajikan berita terkini dan informasi inspiratif untuk Anda.</p>
+
+        <!-- Link Navigasi Footer -->
+        <div class="footer-links">
+            <a href="#about">Tentang Kami</a> |
+            <a href="#contact">Kontak</a> |
+            <a href="#privacy">Kebijakan Privasi</a>
+        </div>
+
+        <!-- Link Media Sosial -->
+        <div class="footer-social">
+            <a href="https://facebook.com" target="_blank">Facebook</a> |
+            <a href="https://twitter.com" target="_blank">Twitter</a> |
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+        </div>
+
+        <!-- Copyright -->
+        <div class="copyright">
+            <p>&copy; 2024 Ruang Biru. Hak Cipta Dilindungi Undang-Undang.</p>
+        </div>
+    </div>
+</footer>
+
     <!-- Footer End -->
 </body>
 </html>
